DDDP 1332 issues with cell background color and overflow

--- a/web/admin/src/App.css
+++ b/web/admin/src/App.css
@@ -291,6 +291,8 @@ ul.modalList {
 
 ul li {
   height: 39px;
+  min-width: 100%;
+  float: left;
   padding: 0px 3px 0px 20px;
   flex: 1;
   display: flex;
